# teste-ie

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: atividade.yml
teste_ie/: calculos.py
tests/: test_calculos.py
