[tool.poetry]
name = "teste-ie"
version = "0.1.0"
description = "Teste de atividade"
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "teste_ie"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
